Allow content outside of wrapper.

--- a/contact.html
+++ b/contact.html
@@ -3,26 +3,28 @@ layout: default
 body_class: "contact"
 ---
 
-<h1>Contact</h1>
+<div class="wrapper">
+  <h1>Contact</h1>
 
-<p>
-Please contact Susanna to book an appointment or for questions by e-mail or
-phone.
-</p>
+  <p>
+  Please contact Susanna to book an appointment or for questions by e-mail or
+  phone.
+  </p>
 
-<p>
-E-mail:
-<a href="mailto:dr.susanna.waern@gmail.com">dr.susanna.waern@gmail.com</a><br>
-Telephone: 07881 958 424 (Monday - Saturday)
-</p>
+  <p>
+  E-mail:
+  <a href="mailto:dr.susanna.waern@gmail.com">dr.susanna.waern@gmail.com</a><br>
+  Telephone: 07881 958 424 (Monday - Saturday)
+  </p>
 
-<p>
-If the phone is not answered, please leave a message with your name and number
-and your telephone call will be returned as soon as possible.
-</p>
+  <p>
+  If the phone is not answered, please leave a message with your name and number
+  and your telephone call will be returned as soon as possible.
+  </p>
 
-<p>
-Please note that these contact details should not be used for psychiatric
-emergencies. In case of an emergency where someone may be at risk of harm,
-please contact your GP or attend your local A&amp;E.
-</p>
+  <p>
+  Please note that these contact details should not be used for psychiatric
+  emergencies. In case of an emergency where someone may be at risk of harm,
+  please contact your GP or attend your local A&amp;E.
+  </p>
+</div>
