--- a/resources-and-links.html
+++ b/resources-and-links.html
@@ -2,131 +2,134 @@
 layout: default
 body_class: "resources"
 ---
-<h1>Resources and Links</h1>
 
-<h2>Information about psychological problems</h2>
+<div class="wrapper">
+  <h1>Resources and Links</h1>
 
-<p>
-<a href="http://www.rcpsych.ac.uk/expertadvice/youthinfo/mhgpfactsheetsindex.aspx">
-  http://www.rcpsych.ac.uk/expertadvice/youthinfo/mhgpfactsheetsindex.aspx
-</a>
-</p>
+  <h2>Information about psychological problems</h2>
 
-<p>
-This page contains information sheets for young people as well as parents about
-common psychological problems in childhood.
-</p>
+  <p>
+  <a href="http://www.rcpsych.ac.uk/expertadvice/youthinfo/mhgpfactsheetsindex.aspx">
+    http://www.rcpsych.ac.uk/expertadvice/youthinfo/mhgpfactsheetsindex.aspx
+  </a>
+  </p>
 
-<h2>Bereavement</h2>
+  <p>
+  This page contains information sheets for young people as well as parents about
+  common psychological problems in childhood.
+  </p>
 
-<p>
-<a href="http://www.hospicenet.org/html/younger.html">
-  http://www.hospicenet.org/html/younger.html
-</a>
-</p>
+  <h2>Bereavement</h2>
 
-<p>
-This website has some helpful advice about preparing children for a forthcoming
-death.
-</p>
+  <p>
+  <a href="http://www.hospicenet.org/html/younger.html">
+    http://www.hospicenet.org/html/younger.html
+  </a>
+  </p>
 
-<p>
-<a href="http://www.riprap.org.uk/support/advice/">
-  http://www.riprap.org.uk/support/advice/
-</a>
-</p>
+  <p>
+  This website has some helpful advice about preparing children for a forthcoming
+  death.
+  </p>
 
-<p>
-This is a good website for teenagers facing the death of someone close.
-</p>
+  <p>
+  <a href="http://www.riprap.org.uk/support/advice/">
+    http://www.riprap.org.uk/support/advice/
+  </a>
+  </p>
 
-<h2>Brain injury</h2>
+  <p>
+  This is a good website for teenagers facing the death of someone close.
+  </p>
 
-<p>
-<a href="http://childbraininjurytrust.org.uk/">
-  http://childbraininjurytrust.org.uk/
-</a>
-</p>
+  <h2>Brain injury</h2>
 
-<p>
-The Brain Injury Trust is a charity that supports children, young people and
-families who have suffered an acquired brain injury.
-</p>
+  <p>
+  <a href="http://childbraininjurytrust.org.uk/">
+    http://childbraininjurytrust.org.uk/
+  </a>
+  </p>
 
-<p>
-<a href="http://www.braininjuryhub.co.uk/">
-  http://www.braininjuryhub.co.uk/
-</a>
-</p>
+  <p>
+  The Brain Injury Trust is a charity that supports children, young people and
+  families who have suffered an acquired brain injury.
+  </p>
 
-<p>
-This is a forum and information source for families with a child with an
-acquired brain injury.
-</p>
+  <p>
+  <a href="http://www.braininjuryhub.co.uk/">
+    http://www.braininjuryhub.co.uk/
+  </a>
+  </p>
 
-<h2>Disfigurement</h2>
+  <p>
+  This is a forum and information source for families with a child with an
+  acquired brain injury.
+  </p>
 
-<p>
-<a href="https://www.changingfaces.org.uk/Home">
-  https://www.changingfaces.org.uk/Home
-</a>
-</p>
+  <h2>Disfigurement</h2>
 
-<p>
-This page focuses on support for children and young people who are disfigured.
-</p>
+  <p>
+  <a href="https://www.changingfaces.org.uk/Home">
+    https://www.changingfaces.org.uk/Home
+  </a>
+  </p>
 
-<h2>Pain</h2>
+  <p>
+  This page focuses on support for children and young people who are disfigured.
+  </p>
 
-<p>
-<a href="http://www.migrainetrust.org/young-sufferers">
-  http://www.migrainetrust.org/young-sufferers
-</a>
-</p>
+  <h2>Pain</h2>
 
-<p>
-This page has information booklets with advice how to manage migraines in
-children and young people.
-</p>
+  <p>
+  <a href="http://www.migrainetrust.org/young-sufferers">
+    http://www.migrainetrust.org/young-sufferers
+  </a>
+  </p>
 
-<h2>General self help (suitable for adolescents and adults)</h2>
+  <p>
+  This page has information booklets with advice how to manage migraines in
+  children and young people.
+  </p>
 
-<h3>Cognitive behaviour therapy</h3>
+  <h2>General self help (suitable for adolescents and adults)</h2>
 
-<p>
-<a href="http://www.getselfhelp.co.uk/">
-  http://www.getselfhelp.co.uk/
-</a>
-</p>
+  <h3>Cognitive behaviour therapy</h3>
 
-<p>
-<a href="http://www.cci.health.wa.gov.au/resources/consumers.cfm">
-  http://www.cci.health.wa.gov.au/resources/consumers.cfm
-</a>
-</p>
+  <p>
+  <a href="http://www.getselfhelp.co.uk/">
+    http://www.getselfhelp.co.uk/
+  </a>
+  </p>
 
-<h3>Mindfulness</h3>
+  <p>
+  <a href="http://www.cci.health.wa.gov.au/resources/consumers.cfm">
+    http://www.cci.health.wa.gov.au/resources/consumers.cfm
+  </a>
+  </p>
 
-<p>
-<a href="http://www.getselfhelp.co.uk/mindfulness.htm">
-  http://www.getselfhelp.co.uk/mindfulness.htm
-</a>
-</p>
+  <h3>Mindfulness</h3>
 
-<h2>Professional organisations</h2>
+  <p>
+  <a href="http://www.getselfhelp.co.uk/mindfulness.htm">
+    http://www.getselfhelp.co.uk/mindfulness.htm
+  </a>
+  </p>
 
-<h3>British Psychological Society</h3>
+  <h2>Professional organisations</h2>
 
-<p>
-<a href="http://www.bps.org.uk/">
-  http://www.bps.org.uk/
-</a>
-</p>
+  <h3>British Psychological Society</h3>
 
-<h3>Health and Care Professions Council</h3>
+  <p>
+  <a href="http://www.bps.org.uk/">
+    http://www.bps.org.uk/
+  </a>
+  </p>
 
-<p>
-<a href="http://www.hcpc-uk.org.uk/">
-  http://www.hcpc-uk.org.uk/
-</a>
-</p>
+  <h3>Health and Care Professions Council</h3>
+
+  <p>
+  <a href="http://www.hcpc-uk.org.uk/">
+    http://www.hcpc-uk.org.uk/
+  </a>
+  </p>
+</div>
