--- a/services.html
+++ b/services.html
@@ -3,223 +3,225 @@ layout: default
 body_class: "services"
 ---
 
-<nav>
-  <ul>
-    <li><a href="#paediatrics">Paediatric</a></li>
-    <li><a href="#neuropsychology">Neuropsychology</a></li>
-    <li><a href="#assessments">Assessments</a></li>
-    <li><a href="#therapies">Therapies</a></li>
-    <li><a href="#parenting">Parenting</a></li>
-    <li><a href="#consultation-and-teaching">Consultation and Teaching</a></li>
-  </ul>
-</nav>
+<div class="wrapper">
+  <nav>
+    <ul>
+      <li><a href="#paediatrics">Paediatric</a></li>
+      <li><a href="#neuropsychology">Neuropsychology</a></li>
+      <li><a href="#assessments">Assessments</a></li>
+      <li><a href="#therapies">Therapies</a></li>
+      <li><a href="#parenting">Parenting</a></li>
+      <li><a href="#consultation-and-teaching">Consultation and Teaching</a></li>
+    </ul>
+  </nav>
 
-<h1>Services offered</h1>
+  <h1>Services offered</h1>
 
-<h2 id="paediatrics">Paediatrics</h2>
+  <h2 id="paediatrics">Paediatrics</h2>
 
-<p>
-Children with chronic illness and physical health problems are at increased
-risk of emotional and behavioural difficulties. This is particularly true for
-children with conditions that affect the brain. Psychological therapy can
-address a range of different issues related to living with a physical health
-condition, such as accepting a diagnosis, adherence to medical treatment,
-self-esteem issues and pain management. It can also improve quality of life by
-minimising secondary problems related to the illness and by focusing on
-achieving goals and values of the young person. 
-</p>
+  <p>
+  Children with chronic illness and physical health problems are at increased
+  risk of emotional and behavioural difficulties. This is particularly true for
+  children with conditions that affect the brain. Psychological therapy can
+  address a range of different issues related to living with a physical health
+  condition, such as accepting a diagnosis, adherence to medical treatment,
+  self-esteem issues and pain management. It can also improve quality of life by
+  minimising secondary problems related to the illness and by focusing on
+  achieving goals and values of the young person. 
+  </p>
 
-<p>
-Having a child with a chronic illness affects the whole family. It can be
-difficult as a parent to maintain the rules and boundaries you would normally
-have at home and this can lead to behavioural problems and conflict.
-Relationships between siblings can also become strained, with any siblings who
-are not unwell feeling left out and sidelined. As a result, Susanna offers
-parenting work and therapy with siblings. 
-</p>
+  <p>
+  Having a child with a chronic illness affects the whole family. It can be
+  difficult as a parent to maintain the rules and boundaries you would normally
+  have at home and this can lead to behavioural problems and conflict.
+  Relationships between siblings can also become strained, with any siblings who
+  are not unwell feeling left out and sidelined. As a result, Susanna offers
+  parenting work and therapy with siblings. 
+  </p>
 
-<p>
-Susanna has extensive experience of working with children and young adults with
-a range of different medical conditions, including cancer, diabetes, epilepsy,
-brain injuries, cerebral palsy, sickle cell disease and cystic fibrosis. She
-has also worked for many years with siblings and parents of children with
-chronic illness.
-</p>
+  <p>
+  Susanna has extensive experience of working with children and young adults with
+  a range of different medical conditions, including cancer, diabetes, epilepsy,
+  brain injuries, cerebral palsy, sickle cell disease and cystic fibrosis. She
+  has also worked for many years with siblings and parents of children with
+  chronic illness.
+  </p>
 
-<h2 id="neuropsychology">Neuropsychology</h2>
+  <h2 id="neuropsychology">Neuropsychology</h2>
 
-<h3>Neuropsychological assessment</h3>
+  <h3>Neuropsychological assessment</h3>
 
-<p>
-A neuropsychological assessment is concerned with brain functions that affect
-learning and academic progress. Neuropsychological assessments are particularly
-important for children who have suffered from an acquired brain injury, such as
-a brain tumour, stroke or a brain injury following an accident, or who have a
-medical condition that affects the brain, for example, epilepsy. However,
-children without an obvious brain injury can also struggle in school and a
-neuropsychological assessment can establish whether this is due to a problem
-with the function of the brain, or whether it is due to psychosocial factors
-such as anxiety, pain or 
-</p>
+  <p>
+  A neuropsychological assessment is concerned with brain functions that affect
+  learning and academic progress. Neuropsychological assessments are particularly
+  important for children who have suffered from an acquired brain injury, such as
+  a brain tumour, stroke or a brain injury following an accident, or who have a
+  medical condition that affects the brain, for example, epilepsy. However,
+  children without an obvious brain injury can also struggle in school and a
+  neuropsychological assessment can establish whether this is due to a problem
+  with the function of the brain, or whether it is due to psychosocial factors
+  such as anxiety, pain or 
+  </p>
 
-<p>
-A neuropsychological assessment can focus on a range of different functions of
-the brain, such as memory, planning and organising work, and attention,
-depending on the problem experienced. An assessment establishes a child’s
-strengths and weaknesses and the assessment report contains recommendations for
-the family and for school. Sometimes the words “cognitive assessments” and
-“neuropsychological assessments” are used interchangeably. A cognitive
-assessment is an assessment of general intellectual functioning (IQ) and is an
-important part of a neuropsychological assessment.
-</p>
+  <p>
+  A neuropsychological assessment can focus on a range of different functions of
+  the brain, such as memory, planning and organising work, and attention,
+  depending on the problem experienced. An assessment establishes a child’s
+  strengths and weaknesses and the assessment report contains recommendations for
+  the family and for school. Sometimes the words “cognitive assessments” and
+  “neuropsychological assessments” are used interchangeably. A cognitive
+  assessment is an assessment of general intellectual functioning (IQ) and is an
+  important part of a neuropsychological assessment.
+  </p>
 
-<h3>Neuropsychological intervention</h3>
+  <h3>Neuropsychological intervention</h3>
 
-<p>
-Neuropsychological interventions can be targeted at different areas and include
-consultations to schools in order to inform them about the child’s functioning
-and provide recommendations that can help the child’s academic progress. It can
-also include education for the family about the strengths and weakness of the
-child, specific parenting skills for children with an acquired brain injury,
-teaching the child strategies that can help academic progress, and discussion
-about external tools and devices that can support the child’s learning.
-</p>
+  <p>
+  Neuropsychological interventions can be targeted at different areas and include
+  consultations to schools in order to inform them about the child’s functioning
+  and provide recommendations that can help the child’s academic progress. It can
+  also include education for the family about the strengths and weakness of the
+  child, specific parenting skills for children with an acquired brain injury,
+  teaching the child strategies that can help academic progress, and discussion
+  about external tools and devices that can support the child’s learning.
+  </p>
 
-<h2 id="assessments">Assessments</h2>
+  <h2 id="assessments">Assessments</h2>
 
-<p>
-A psychological assessment focuses on understanding how a problem developed,
-what maintains it and helps inform a plan of how to deal with the problem.
-Whilst an assessment can be diagnostic (for example, diagnosing depression),
-Psychologists are generally less concerned with diagnosis and instead
-specialises in finding an individual explanation for every person. This means
-that an individual treatment plan can be developed and the problem can still be
-addressed even if it does not fit the criteria for a specific diagnosis.
-</p>
+  <p>
+  A psychological assessment focuses on understanding how a problem developed,
+  what maintains it and helps inform a plan of how to deal with the problem.
+  Whilst an assessment can be diagnostic (for example, diagnosing depression),
+  Psychologists are generally less concerned with diagnosis and instead
+  specialises in finding an individual explanation for every person. This means
+  that an individual treatment plan can be developed and the problem can still be
+  addressed even if it does not fit the criteria for a specific diagnosis.
+  </p>
 
-<h2 id="therapies">Therapies</h2>
+  <h2 id="therapies">Therapies</h2>
 
-<p>
-Psychological therapies can be helpful for a range of different emotional and
-behavioural problems. Common problems include anxiety, phobias, low mood, Post
-Traumatic Stress Disorder (PTSD), low self-esteem, anger, self-harm and
-bereavement.
-</p>
+  <p>
+  Psychological therapies can be helpful for a range of different emotional and
+  behavioural problems. Common problems include anxiety, phobias, low mood, Post
+  Traumatic Stress Disorder (PTSD), low self-esteem, anger, self-harm and
+  bereavement.
+  </p>
 
-<p>
-Psychological therapy can also address a range of different issues related to
-living with a physical health condition, such as accepting a diagnosis,
-adherence to medical treatment, and pain management. Therapy will be adapted
-according to the child age and level of cognitive function. The decision which
-therapy to use is made based on the presenting problem, the evidence base and
-the preferences of the family.
-</p>
+  <p>
+  Psychological therapy can also address a range of different issues related to
+  living with a physical health condition, such as accepting a diagnosis,
+  adherence to medical treatment, and pain management. Therapy will be adapted
+  according to the child age and level of cognitive function. The decision which
+  therapy to use is made based on the presenting problem, the evidence base and
+  the preferences of the family.
+  </p>
 
-<h3>Cognitive Behaviour Therapy (CBT)</h3>
+  <h3>Cognitive Behaviour Therapy (CBT)</h3>
 
-<p>
-CBT looks at how your thoughts and behaviours influence the way you feel. By
-changing the way you think and how you act in certain situations, it can
-influence the way you feel. CBT focuses primarily on problems and difficulties
-in the here and now, although it will take into account events that have led to
-the current difficulties.
-</p>
+  <p>
+  CBT looks at how your thoughts and behaviours influence the way you feel. By
+  changing the way you think and how you act in certain situations, it can
+  influence the way you feel. CBT focuses primarily on problems and difficulties
+  in the here and now, although it will take into account events that have led to
+  the current difficulties.
+  </p>
 
-<p>
-CBT has been thoroughly researched and is a recommended psychological treatment
-for a range of different problems, including anxiety and low mood.
-</p>
+  <p>
+  CBT has been thoroughly researched and is a recommended psychological treatment
+  for a range of different problems, including anxiety and low mood.
+  </p>
 
-<h3>Family Therapy (Systemic Therapy)</h3>
+  <h3>Family Therapy (Systemic Therapy)</h3>
 
-<p>
-Family therapy seeks to understand problems in a contextual framework rather
-than addressing the problem on an individual level. Working with children and
-young people, Family Therapy strategies are often incorporated into other
-therapies (like CBT), recognising the fact that when a family member has a
-problem, this will affect the rest of the family, and their actions will in
-turn influence the problem.
-</p>
+  <p>
+  Family therapy seeks to understand problems in a contextual framework rather
+  than addressing the problem on an individual level. Working with children and
+  young people, Family Therapy strategies are often incorporated into other
+  therapies (like CBT), recognising the fact that when a family member has a
+  problem, this will affect the rest of the family, and their actions will in
+  turn influence the problem.
+  </p>
 
-<h3>Acceptance and Commitment Therapy (ACT)</h3>
+  <h3>Acceptance and Commitment Therapy (ACT)</h3>
 
-<p>
-ACT is a form of cognitive therapy which focuses on accepting what is out of
-your personal control and committing to taking action that enriches your life.
-ACT emphasises the importance of living mindfully (see below for more
-information about Mindfulness).
-</p>
+  <p>
+  ACT is a form of cognitive therapy which focuses on accepting what is out of
+  your personal control and committing to taking action that enriches your life.
+  ACT emphasises the importance of living mindfully (see below for more
+  information about Mindfulness).
+  </p>
 
-<p>
-ACT has an increasing evidence base for dealing with psychological problems, in
-particular in the area of chronic pain.
-</p>
+  <p>
+  ACT has an increasing evidence base for dealing with psychological problems, in
+  particular in the area of chronic pain.
+  </p>
 
-<h3>Mindfulness</h3>
+  <h3>Mindfulness</h3>
 
-<p>
-Mindfulness is not a therapy per se but has recently been incorporated as a
-skill to use as part of CBT or ACT. Mindfulness means paying attention in a
-particular way: on purpose, in the present moment, and non-judgementally. It
-can change the way you relate to a problem and reduce the impact of negative
-experiences, thoughts and feelings.
-</p>
+  <p>
+  Mindfulness is not a therapy per se but has recently been incorporated as a
+  skill to use as part of CBT or ACT. Mindfulness means paying attention in a
+  particular way: on purpose, in the present moment, and non-judgementally. It
+  can change the way you relate to a problem and reduce the impact of negative
+  experiences, thoughts and feelings.
+  </p>
 
-<h3>Bereavement</h3>
+  <h3>Bereavement</h3>
 
-<p>
-There is no such thing as a ‘normal’ bereavement and most children or young
-people who go through a bereavement do not need professional input. However, if
-the child has strong reactions that continue over time (including drastic
-behaviour changes), school performance is seriously affected, and the child or
-young people isolate themselves from family and friends, bereavement therapy
-can be of benefit.  In cases where the child is bereaved by suicide or murder,
-the child has witnessed the death, or the child had responsibility for the
-death or responsibility for the dead person, early professional contact is
-recommended.
-</p>
+  <p>
+  There is no such thing as a ‘normal’ bereavement and most children or young
+  people who go through a bereavement do not need professional input. However, if
+  the child has strong reactions that continue over time (including drastic
+  behaviour changes), school performance is seriously affected, and the child or
+  young people isolate themselves from family and friends, bereavement therapy
+  can be of benefit.  In cases where the child is bereaved by suicide or murder,
+  the child has witnessed the death, or the child had responsibility for the
+  death or responsibility for the dead person, early professional contact is
+  recommended.
+  </p>
 
-<h2 id="parenting">Parenting</h2>
+  <h2 id="parenting">Parenting</h2>
 
-<p>
-Being a parent can be very stressful and especially if your child has a
-physical illness or special needs. Parenting sessions focus on understanding
-the meaning of your child’s behaviour and finding strategies that can improve
-difficult behaviour. It focuses on building a relationship between a child and
-a parent that focuses on positive interactions.
-</p>
+  <p>
+  Being a parent can be very stressful and especially if your child has a
+  physical illness or special needs. Parenting sessions focus on understanding
+  the meaning of your child’s behaviour and finding strategies that can improve
+  difficult behaviour. It focuses on building a relationship between a child and
+  a parent that focuses on positive interactions.
+  </p>
 
-<p>
-Depending on the age of your child, your child may have their own therapy in
-conjunction with parenting sessions and some sessions may be done jointly.
-</p>
+  <p>
+  Depending on the age of your child, your child may have their own therapy in
+  conjunction with parenting sessions and some sessions may be done jointly.
+  </p>
 
-<h2 id="consultation-and-teaching">Consultation and Teaching</h2>
+  <h2 id="consultation-and-teaching">Consultation and Teaching</h2>
 
-<p>
-Consultation and teaching covering a range of topics is offered to NHS
-services, schools, universities and private organisations.
-</p>
+  <p>
+  Consultation and teaching covering a range of topics is offered to NHS
+  services, schools, universities and private organisations.
+  </p>
 
-<h3>Consultation</h3>
+  <h3>Consultation</h3>
 
-<p>
-Consultation regarding neuropsychological issues is offered to NHS services and
-schools where there is no access to a paediatric neuropsychologist, or where
-specialist knowledge about a certain condition is required. 
-</p>
+  <p>
+  Consultation regarding neuropsychological issues is offered to NHS services and
+  schools where there is no access to a paediatric neuropsychologist, or where
+  specialist knowledge about a certain condition is required. 
+  </p>
 
-<p>
-The level of consultation can vary depending on the need of the service but can
-involve anything from a telephone conversation discussing test results to
-helping to plan an assessment.
-<p>
+  <p>
+  The level of consultation can vary depending on the need of the service but can
+  involve anything from a telephone conversation discussing test results to
+  helping to plan an assessment.
+  <p>
 
-<h3>Teaching</h3>
+  <h3>Teaching</h3>
 
-<p>
-Teaching covering a range of topics can be offered, including paediatric
-psychology, paediatric neuropsychology, child development, emotional and
-behavioural problems in childhood, therapies for children and stress
-management.
-</p>
+  <p>
+  Teaching covering a range of topics can be offered, including paediatric
+  psychology, paediatric neuropsychology, child development, emotional and
+  behavioural problems in childhood, therapies for children and stress
+  management.
+  </p>
+</div>
