--- a/about.html
+++ b/about.html
@@ -3,41 +3,43 @@ layout: default
 body_class: "about"
 ---
 
-<h1>About Dr Susanna Waern</h1>
+<div class="wrapper">
+  <h1>About Dr Susanna Waern</h1>
 
-<p>
-Susanna completed her doctoral training in 2007 at the University of Surrey.
-She has since worked both in Paediatrics and community Child and Adolescent
-Mental Health Services (CAMHS). She completed her Postgraduate Diploma in
-Paediatric Neuropsychology at University College London in 2013. She currently
-works part-time in the NHS providing psychological and neuropsychological
-services to children with cancer, with a specific focus on children with brain
-tumours. Over the years, Susanna has gained significant experience of working
-with a range of different childhood problems as well as physical health
-problems.
-</p>
+  <p>
+  Susanna completed her doctoral training in 2007 at the University of Surrey.
+  She has since worked both in Paediatrics and community Child and Adolescent
+  Mental Health Services (CAMHS). She completed her Postgraduate Diploma in
+  Paediatric Neuropsychology at University College London in 2013. She currently
+  works part-time in the NHS providing psychological and neuropsychological
+  services to children with cancer, with a specific focus on children with brain
+  tumours. Over the years, Susanna has gained significant experience of working
+  with a range of different childhood problems as well as physical health
+  problems.
+  </p>
 
-<p>
-In 2011, Susanna started working in the private sector, including working as an
-Associate for Recolo, a service providing neuropsychological rehabilitation in
-the community. In addition to her clinical work, Susanna has worked with
-Pearson Assessment UK (producers of neuropsychological assessments) on a
-standardisation project for a new neuropsychological assessment tool. She is
-also a guest lecturer at a number of universities, including University College
-London.
-</p>
+  <p>
+  In 2011, Susanna started working in the private sector, including working as an
+  Associate for Recolo, a service providing neuropsychological rehabilitation in
+  the community. In addition to her clinical work, Susanna has worked with
+  Pearson Assessment UK (producers of neuropsychological assessments) on a
+  standardisation project for a new neuropsychological assessment tool. She is
+  also a guest lecturer at a number of universities, including University College
+  London.
+  </p>
 
-<p>
-Susanna is committed to providing a evidence-based service and since
-qualifying, she has kept abreast with new research and developed new skills
-through further training in order to ensure that her practice is continuously
-developing. However, she is also highly conscious of the importance of the
-therapeutic relationship and her uttermost aim is to provide a child-friendly
-service, using a range of creative ideas to engage children and young people.
-</p>
+  <p>
+  Susanna is committed to providing a evidence-based service and since
+  qualifying, she has kept abreast with new research and developed new skills
+  through further training in order to ensure that her practice is continuously
+  developing. However, she is also highly conscious of the importance of the
+  therapeutic relationship and her uttermost aim is to provide a child-friendly
+  service, using a range of creative ideas to engage children and young people.
+  </p>
 
-<p>
-Susanna is registered with the Health and Care Professions Council and is a
-member of the British Psychological Society, including the Division for
-Clinical Psychology and the Faculty for Children and Young People.
-</p>
+  <p>
+  Susanna is registered with the Health and Care Professions Council and is a
+  member of the British Psychological Society, including the Division for
+  Clinical Psychology and the Faculty for Children and Young People.
+  </p>
+</div>
