--- a/index.html
+++ b/index.html
@@ -3,45 +3,52 @@ layout: default
 body_class: "home"
 ---
 
-<section class="intro">
-  <p>
-  Psychological and neuropsycholgical assessments and interventions for children
-  and young people, addressing emotional, behavioural, physical/medical and
-  learning issues.
-  </p>
-  <img src="/images/susanna_and_aston.jpg" alt="Dr Susanna Waern and Aston">
-</section>
+<div class="wrapper">
+  <section class="intro">
+    <p>
+    Psychological and neuropsycholgical assessments and interventions for children
+    and young people, addressing emotional, behavioural, physical/medical and
+    learning issues.
+    </p>
+    <img src="/images/susanna_and_aston.jpg" alt="Dr Susanna Waern and Aston">
+  </section>
 
-<section class="services">
-  <h2>Services</h2>
-  <p>
-  Susanna offers psychological and neuropsychological assessments and
-  interventions for children, adolescents and families.
-  </p>
-  <p class="continue-reading">
-  <a href="/services">Services offered</a>
-  </p>
-</section>
+</div>
 
-<section class="young-people">
-  <h2>For Young People</h2>
-  <p>
-  Some young people don't know what to expect when they are going to see a
-  psychologist. Here are answers to some frequently asked questions.
-  </p>
-  <p class="continue-reading">
-  <a href="/information-for-young-people">More for young people</a>
-  </p>
-</section>
+<div class="featured">
+  <div class="wrapper">
+    <section class="services">
+      <h2>Services</h2>
+      <p>
+      Susanna offers psychological and neuropsychological assessments and
+      interventions for children, adolescents and families.
+      </p>
+      <p class="continue-reading">
+      <a href="/services">Services offered</a>
+      </p>
+    </section>
 
-<section class="about">
-  <h2>About</h2>
-  <p>
-  Susanna completed her clinical training in 2007 and has been working in
-  paediatrics and child and adolescent services in the NHS and the private
-  sector since.
-  </p>
-  <p class="continue-reading">
-  <a href="/about">More about Susanna</a>
-  </p>
-</section>
+    <section class="young-people">
+      <h2>For Young People</h2>
+      <p>
+      Some young people don't know what to expect when they are going to see a
+      psychologist. Here are answers to some frequently asked questions.
+      </p>
+      <p class="continue-reading">
+      <a href="/information-for-young-people">More for young people</a>
+      </p>
+    </section>
+
+    <section class="about">
+      <h2>About</h2>
+      <p>
+      Susanna completed her clinical training in 2007 and has been working in
+      paediatrics and child and adolescent services in the NHS and the private
+      sector since.
+      </p>
+      <p class="continue-reading">
+      <a href="/about">More about Susanna</a>
+      </p>
+    </section>
+  </div>
+</div>
