Clean up markup.

--- a/services.html
+++ b/services.html
@@ -27,7 +27,7 @@ body_class: "services"
   condition, such as accepting a diagnosis, adherence to medical treatment,
   self-esteem issues and pain management. It can also improve quality of life by
   minimising secondary problems related to the illness and by focusing on
-  achieving goals and values of the young person. 
+  achieving goals and values of the young person.
   </p>
 
   <p>
@@ -36,7 +36,7 @@ body_class: "services"
   have at home and this can lead to behavioural problems and conflict.
   Relationships between siblings can also become strained, with any siblings who
   are not unwell feeling left out and sidelined. As a result, Susanna offers
-  parenting work and therapy with siblings. 
+  parenting work and therapy with siblings.
   </p>
 
   <p>
@@ -60,16 +60,16 @@ body_class: "services"
   children without an obvious brain injury can also struggle in school and a
   neuropsychological assessment can establish whether this is due to a problem
   with the function of the brain, or whether it is due to psychosocial factors
-  such as anxiety, pain or 
+  such as anxiety, pain or
   </p>
 
   <p>
   A neuropsychological assessment can focus on a range of different functions of
   the brain, such as memory, planning and organising work, and attention,
-  depending on the problem experienced. An assessment establishes a child’s
+  depending on the problem experienced. An assessment establishes a child's
   strengths and weaknesses and the assessment report contains recommendations for
-  the family and for school. Sometimes the words “cognitive assessments” and
-  “neuropsychological assessments” are used interchangeably. A cognitive
+  the family and for school. Sometimes the words "cognitive assessments" and
+  "neuropsychological assessments" are used interchangeably. A cognitive
   assessment is an assessment of general intellectual functioning (IQ) and is an
   important part of a neuropsychological assessment.
   </p>
@@ -78,12 +78,12 @@ body_class: "services"
 
   <p>
   Neuropsychological interventions can be targeted at different areas and include
-  consultations to schools in order to inform them about the child’s functioning
-  and provide recommendations that can help the child’s academic progress. It can
+  consultations to schools in order to inform them about the child's functioning
+  and provide recommendations that can help the child's academic progress. It can
   also include education for the family about the strengths and weakness of the
   child, specific parenting skills for children with an acquired brain injury,
   teaching the child strategies that can help academic progress, and discussion
-  about external tools and devices that can support the child’s learning.
+  about external tools and devices that can support the child's learning.
   </p>
 
   <h2 id="assessments">Assessments</h2>
@@ -169,7 +169,7 @@ body_class: "services"
   <h3>Bereavement</h3>
 
   <p>
-  There is no such thing as a ‘normal’ bereavement and most children or young
+  There is no such thing as a 'normal' bereavement and most children or young
   people who go through a bereavement do not need professional input. However, if
   the child has strong reactions that continue over time (including drastic
   behaviour changes), school performance is seriously affected, and the child or
@@ -185,7 +185,7 @@ body_class: "services"
   <p>
   Being a parent can be very stressful and especially if your child has a
   physical illness or special needs. Parenting sessions focus on understanding
-  the meaning of your child’s behaviour and finding strategies that can improve
+  the meaning of your child's behaviour and finding strategies that can improve
   difficult behaviour. It focuses on building a relationship between a child and
   a parent that focuses on positive interactions.
   </p>
