Update footer and contact information.

--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@ body_class: "contact"
 
   <p>
   E-mail:
-  <a href="mailto:dr.susanna.waern@gmail.com">dr.susanna.waern@gmail.com</a><br>
-  Telephone: 07881 958 424 (Monday - Saturday)
+  <a href="mailto:{{ site.email }}">{{ site.email }}</a><br>
+  Telephone: <a href="tel:{{ site.phone }}">{{ site.phone }}</a> (Monday - Saturday)
   </p>
 
   <p>
