Bold important note on the Contact page.

--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,8 @@ body_class: "contact"
   </p>
 
   <p>
-  Please note that these contact details should not be used for psychiatric
-  emergencies. In case of an emergency where someone may be at risk of harm,
-  please contact your GP or attend your local A&amp;E.
+  <strong>Please note that these contact details should not be used for
+  psychiatric emergencies.</strong> In case of an emergency where someone may
+  be at risk of harm, please contact your GP or attend your local A&amp;E.
   </p>
 </div>
