Add a profile picture to the About page.

--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@ body_class: "about"
 <div class="wrapper">
   <h1>About Dr Susanna Waern</h1>
 
+  <img class="profile-picture" src="/images/susanna.jpg" alt="Dr Susanna Waern" width="300">
+
   <p>
   Susanna completed her doctoral training in 2007 at the University of Surrey.
   She has since worked both in Paediatrics and community Child and Adolescent
