Link to councils and societies.

--- a/about.html
+++ b/about.html
@@ -40,8 +40,10 @@ body_class: "about"
   </p>
 
   <p>
-  Susanna is registered with the Health and Care Professions Council and is a
-  member of the British Psychological Society, including the Division for
-  Clinical Psychology and the Faculty for Children and Young People.
+  Susanna is registered with the <a href="http://www.hpc-uk.org">Health and
+  Care Professions Council</a> and is a member of the
+  <a href="http://www.bps.org.uk">British Psychological Society</a>, including
+  the Division for Clinical Psychology and the Faculty for Children and Young
+  People.
   </p>
 </div>
